v2.1
====

Bug fixes:
 - The rescaling of error spectrum was not working as intended, and was mostly just applying
   a constant factor to all the spectrum instead of having a wavelength dependence.

New features:
 - The code can now output the adopted rescaling of the error spectrum.


v2.0
====

First public version.