@@ -7,6 +7,7 @@ Bug fixes:
 
 New features:
  - The code can now output the adopted rescaling of the error spectrum.
+ - The code will no longer accept spectra with missing CUNIT keywords
 
 
 v2.0
